--- a/package.json
+++ b/package.json
@@ -4,34 +4,40 @@
   "description": "融合react react-redux react-router一起实践一个项目",
   "main": "index.js",
   "scripts": {
-    "start": "set NODE_ENV=dev&&webpack-dev-server --progress --colors"
+    "start": "set NODE_ENV=dev&&webpack-dev-server --progress --colors",
+    "mock": "node --harmony ./mock/server.js"
   },
   "author": "zhaojian",
   "license": "ISC",
   "dependencies": {
+    "es6-promise": "^4.1.1",
     "react": "^15.6.1",
     "react-addons-pure-render-mixin": "^15.6.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "2.7.0",
     "react-router-dom": "^4.1.2",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
     "css-loader": "^0.28.4",
     "html-webpack-plugin": "^2.29.0",
+    "koa": "^2.0.0",
+    "koa-body": "^1.6.0",
+    "koa-router": "^5.4.0",
     "less-loader": "^4.0.5",
     "open-browser-webpack-plugin": "0.0.5",
     "postcss-loader": "^2.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.3.0",
-    "webpack-dev-server": "^2.5.1",
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1"
+    "webpack-dev-server": "^2.5.1"
   }
 }
