--- a/package.json
+++ b/package.json
@@ -18,26 +18,31 @@
     "react-router": "2.7.0",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "^2.0.3",
+    "react-transform-hmr": "^1.0.4",
+    "react-swipe": "^5.0.5"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
+    "autoprefixer": "^6.4.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.28.4",
-    "html-webpack-plugin": "^2.29.0",
+    "file-loader": "^0.11.2",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.22.0",
     "koa": "^2.0.0",
     "koa-body": "^1.6.0",
     "koa-router": "^5.4.0",
-    "less-loader": "^4.0.5",
-    "open-browser-webpack-plugin": "0.0.5",
-    "postcss-loader": "^2.0.6",
+    "less": "^2.7.2",
+    "less-loader": "^2.2.3",
+    "open-browser-webpack-plugin": "0.0.2",
+    "postcss-loader": "^0.11.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "webpack": "^3.3.0",
-    "webpack-dev-server": "^2.5.1"
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.0"
   }
 }
